[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/UI/SkillTreePathBar/SkillPath.gd" type="Script" id=1]
[ext_resource path="res://Assets/2D/icons/effects/png/skill_icons6.png" type="Texture" id=2]
[ext_resource path="res://Assets/2D/icons/effects/png/skill_icons30.png" type="Texture" id=3]
[ext_resource path="res://Assets/2D/icons/effects/png/skill_icons43.png" type="Texture" id=4]
[ext_resource path="res://Assets/2D/icons/effects/png/skill_icons50.png" type="Texture" id=5]
[ext_resource path="res://Assets/2D/icons/effects/png/skill_icons29.png" type="Texture" id=6]
[ext_resource path="res://Assets/2D/icons/effects/png/skill_icons26.png" type="Texture" id=7]
[ext_resource path="res://Resources/Themes/GeneralUITheme.tres" type="Theme" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.262745, 0.290196, 0.372549, 1 )

[node name="SkillPath" type="Control"]
margin_right = 288.0
margin_bottom = 64.0
mouse_filter = 1
theme = ExtResource( 8 )
script = ExtResource( 1 )

[node name="SkillPath" type="Panel" parent="."]
margin_top = 24.0
margin_right = 285.0
margin_bottom = 104.0
rect_min_size = Vector2( 285, 64 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="SkillPath"]
margin_top = -16.0
margin_right = 40.0
margin_bottom = -2.0
text = "TÅŸitle"

[node name="Line" type="ColorRect" parent="SkillPath"]
margin_left = 8.0
margin_top = 38.0
margin_right = 280.0
margin_bottom = 42.0

[node name="Skills" type="HBoxContainer" parent="SkillPath"]
margin_left = 8.0
margin_top = 24.0
margin_right = 280.0
margin_bottom = 56.0
custom_constants/separation = 16
__meta__ = {
"_edit_group_": true
}

[node name="Skill1" type="TextureRect" parent="SkillPath/Skills"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true

[node name="Slider" type="HSlider" parent="SkillPath/Skills/Skill1"]
margin_top = -9.0
margin_right = 64.0
margin_bottom = 7.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0

[node name="Label" type="Label" parent="SkillPath/Skills/Skill1"]
margin_top = -24.0
margin_right = 29.0
margin_bottom = -8.0
text = "0/5"
align = 2

[node name="Skill2" type="TextureRect" parent="SkillPath/Skills"]
margin_left = 48.0
margin_right = 80.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 7 )
expand = true

[node name="Slider" type="HSlider" parent="SkillPath/Skills/Skill2"]
margin_top = -9.0
margin_right = 64.0
margin_bottom = 7.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0

[node name="Label" type="Label" parent="SkillPath/Skills/Skill2"]
margin_top = -24.0
margin_right = 29.0
margin_bottom = -8.0
text = "0/5"
align = 2

[node name="Skill3" type="TextureRect" parent="SkillPath/Skills"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 6 )
expand = true

[node name="Slider" type="HSlider" parent="SkillPath/Skills/Skill3"]
margin_top = -9.0
margin_right = 64.0
margin_bottom = 7.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0

[node name="Label" type="Label" parent="SkillPath/Skills/Skill3"]
margin_top = -24.0
margin_right = 29.0
margin_bottom = -8.0
text = "0/5"
align = 2

[node name="Skill4" type="TextureRect" parent="SkillPath/Skills"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )
expand = true

[node name="Slider" type="HSlider" parent="SkillPath/Skills/Skill4"]
margin_top = -9.0
margin_right = 64.0
margin_bottom = 7.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0

[node name="Label" type="Label" parent="SkillPath/Skills/Skill4"]
margin_top = -24.0
margin_right = 29.0
margin_bottom = -8.0
text = "0/5"
align = 2

[node name="Skill5" type="TextureRect" parent="SkillPath/Skills"]
margin_left = 192.0
margin_right = 224.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 5 )
expand = true

[node name="Slider" type="HSlider" parent="SkillPath/Skills/Skill5"]
margin_top = -9.0
margin_right = 64.0
margin_bottom = 7.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0

[node name="Label" type="Label" parent="SkillPath/Skills/Skill5"]
margin_top = -24.0
margin_right = 29.0
margin_bottom = -8.0
text = "0/5"
align = 2

[node name="Skill6" type="TextureRect" parent="SkillPath/Skills"]
margin_left = 240.0
margin_right = 272.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 4 )
expand = true

[node name="Slider" type="HSlider" parent="SkillPath/Skills/Skill6"]
margin_top = -9.0
margin_right = 64.0
margin_bottom = 7.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0

[node name="Label" type="Label" parent="SkillPath/Skills/Skill6"]
margin_top = -24.0
margin_right = 29.0
margin_bottom = -8.0
text = "0/5"
align = 2

[node name="Button" type="Button" parent="."]
margin_top = 84.0
margin_right = 59.0
margin_bottom = 104.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Choose"

[connection signal="mouse_entered" from="." to="." method="_on_SkillPath_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SkillPath_mouse_exited"]
[connection signal="value_changed" from="SkillPath/Skills/Skill1/Slider" to="." method="_on_Slider1_value_changed"]
[connection signal="value_changed" from="SkillPath/Skills/Skill2/Slider" to="." method="_on_Slider2_value_changed"]
[connection signal="value_changed" from="SkillPath/Skills/Skill3/Slider" to="." method="_on_Slider3_value_changed"]
[connection signal="value_changed" from="SkillPath/Skills/Skill4/Slider" to="." method="_on_Slider4_value_changed"]
[connection signal="value_changed" from="SkillPath/Skills/Skill5/Slider" to="." method="_on_Slider5_value_changed"]
[connection signal="value_changed" from="SkillPath/Skills/Skill6/Slider" to="." method="_on_Slider6_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
